Fix mobile compatability for donations page Changed width of images and mobile section. Added classNames to the google forms so they could be styled for mobile. Made small changes to a few of the mobile classes for better visibility on mobile.

--- a/src/pages/Donations.css
+++ b/src/pages/Donations.css
@@ -22,7 +22,6 @@ h3 {
 #pastpartnersection {
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
     padding-top: 3%;
     align-items: flex-start;
 }
@@ -44,6 +43,10 @@ h3 {
     .description {
         padding-right: 15px;
     }
+
+    #pastpartnersection {
+        padding-left: 10%;
+    }
 }
 
 @media screen and (max-width: 1290px) {
@@ -53,7 +56,7 @@ h3 {
 
     .mobile-section {
         text-align: center;
-        margin: 200px;
+        margin: 50px;
     }
 
     .pic {
@@ -66,5 +69,25 @@ h3 {
     .description {
         padding: 15px;
         text-align: justify;
+    }
+
+    #pastpartnersection {
+        display: flex;
+        flex-direction: column;
+        padding-top: 3%;
+        align-items: center;
+        text-align: justify;
+    }
+    
+    .donation-forms-container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .donation-form {
+        width: 100%;
+        align-items: center;
     }
 }
